# multi-agent-federal-form-automation-system

./: .gitignore  CLAUDE.md  LICENSE  README.md
agents/: federalrunner-instructions.md  federalscout-instructions.md
docs/: REPOSITORY_MIGRATION_PLAN.md
docs/auth0/: AUTH0_CONCEPTS.md  AUTH0_IMPLEMENTATION_GUIDE.md
docs/blog-demo/: blog-part1-final.md  blog-part2.md  demo_script.md  federal_runner_demo_realistic.txt  federalrunner_demo_realistic.md  phase1-tech-demo-script.md  phase2-tech-demo-scriptmd  video-script-style-guide-and-instructions.md
docs/deployment/: DEPLOYMENT_GUIDE.md  LESSONS_LEARNED.md  TIMEOUT_CONFIGURATION.md
docs/discovery/: CLAUDE_DESKTOP_SETUP.md  OPTIMIZATIONS.md
docs/execution/: TEST_INSTRUCTIONS.md
docs/fixes/: DEPLOYMENT_FIXES_SUMMARY.md  SCREENSHOT_STRATEGY.md  id-selector-fix.md  (+12 more)
mcp-servers/federalrunner-mcp/: .dockerignore  .env.deployment.example  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
mcp-servers/federalrunner-mcp/scripts/: deploy-to-cloud-run.sh  setup.sh
mcp-servers/federalrunner-mcp/src/: auth.py  config.py  execution_tools.py  logging_config.py  models.py  playwright_client.py  schema_validator.py  server.py
mcp-servers/federalrunner-mcp/tests/: conftest.py  test_config_loading.py  test_execution_local.py
mcp-servers/federalscout-mcp/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
mcp-servers/federalscout-mcp/scripts/: README.md  setup.sh  start_browser_for_demo.sh
mcp-servers/federalscout-mcp/src/: __init__.py  config.py  discovery_tools.py  logging_config.py  models.py  playwright_client.py  server.py
mcp-servers/federalscout-mcp/tests/: __init__.py  conftest.py  test_discovery_local.py  test_session_persistence.py
schemas/: wizard-structure-v1.schema.json
wizards/: _partial_61f325ce-e920-4650-b83e-dae0b5da2342.json
(+37 files in other folders)
