[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federalscout-mcp"
version = "1.0.0"
description = "FederalScout Discovery Agent - Interactive wizard structure discovery via MCP"
authors = [{name = "Multi-Agent Federal Form Automation System Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "mcp>=1.1.2",
    "playwright>=1.48.0",
    "Pillow>=11.0.0",
    "python-dateutil>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285"
]

[project.scripts]
federalscout = "federalscout_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["federalscout_mcp*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
